--- a/style.css
+++ b/style.css
@@ -2,37 +2,29 @@
 
 body {
   font-family: "roboto", sans-serif;
-
+  margin: 0;
 }
 .YT-Header {
-  height: 20px;
-  padding: 10px ;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 1rem;
   position: sticky;
-  z-index: 10;
-    
+  z-index: 4;
 }
 .YT-Header .logo-left {
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  gap: 20px;
+  gap: 1.1rem;
   cursor: pointer;
+  margin: -0.4rem;
 }
 .sr-cen {
-  display: flex;
-  height: 40px;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 650px;
 }
 .sr-cen .sr-cont {
   display: flex;
   align-items: center;
-  width: 550px;
-  gap: 14px;
+  gap:0.875rem ;
 }
 .sr-cen .sr-cont .srbr-box {
   display: flex;
@@ -41,22 +33,18 @@ body {
   height: 35px;
   border-radius: 30px 30px 30px 30px;
   overflow: hidden;
-  
 }
 .sr-cen .sr-cont .srbr-box .srbar .sr-input {
   width: 400px;
   border: none;
-  display: flex;
+  display: inline;
   outline: none;
   flex-grow: 1;
   margin-left: 15px;
   font-size: inherit;
-  
 }
 
-
 #sr-ic {
-  display: flex;
   height: 40px;
   width: 60px;
   border-radius: 0 45px 45px 0;
@@ -64,22 +52,16 @@ body {
   cursor: pointer;
   outline: none;
   border: none;
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   border: 1px solid gray;
 }
-#sr-ic .sr-ic-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: auto;
-  color: black;
+#sr-ic:hover {
+  background-color: #f0f0f0;
 }
 
 #mic-ic {
   display: flex;
-  background-color: #F0F0F0; /* Transparent background for the button */
+  background-color: #f0f0f0; /* Transparent background for the button */
   border: none;
   padding: 0; /* Remove padding to ensure the button touches the container border */
   cursor: pointer;
@@ -89,7 +71,6 @@ body {
   height: 35px;
   border-radius: 50%;
   outline: none;
-  
 }
 #mic-ic .mic-ic-img {
   display: block;
@@ -100,26 +81,25 @@ body {
   bottom: 0;
   right: 0;
 }
-.YT-Header .icons-right{
+.YT-Header .icons-right {
   display: flex;
   padding: 0;
-  gap: 25px;
+  gap: 1.563rem;
   cursor: pointer;
 }
-.side-bar{
+.side-bar {
   background-color: #fff;
-  width: 15%;
+  width: 17%;
   height: 100vh;
   position: fixed;
   top: 0;
   padding-left: 1%;
   padding-top: 70px;
- 
 }
 
-.side-bar .sdbr-links a img{
+.side-bar .sdbr-links a img {
   width: 20px;
-  margin-right: 20px;
+  margin-right: 1.25rem;
 }
 .side-bar .sdbr-links a {
   display: flex;
@@ -127,8 +107,33 @@ body {
   margin-bottom: 20px;
   width: fit-content;
   flex-wrap: wrap;
+  margin: 0 ;
 }
 .side-bar .sdbr-links .hr {
   border: 0;
   height: 1px;
+  width: 85%;
+}
+.subsd-list h3 {
+  font-size: 13px;
+  margin: 20px 0;
+  color: #5a5a5a;
+}
+.subsd-list a {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  width: fit-content;
+  flex-wrap: wrap;
+}
+.subsd-list a img {
+  width: 25px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+.small-side-bar {
+  width: 5%;
+}
+.small-side-bar a p {
+  display: none;
 }
