--- a/videos section.css
+++ b/videos section.css
@@ -1,6 +1,46 @@
-*,*::before, *::after{
-    box-sizing: border-box;
-    font-family: roboto, Arial, Helvetica, sans-serif;
+
+
+.main-content{
+    display: flex;
+    position: fixed;
+    
+}
+.categories{
+    display: flex;
+    gap: 3rem 1rem;
+    padding-top: 1rem;
+    flex-wrap: nowrap;
+    margin: 0 1.5rem;
+}
+.category-section {
+    display: flex;
+    overflow: hidden;
+    flex-wrap: nowrap;
+}
+.category {
+    word-wrap: none;
+    white-space: nowrap;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #e7e7e7;
+    padding: .5rem .5rem;
+    font-size:small;
+    cursor: pointer;
+    transition: background-color 150ms;   
+}
+.category:hover {
+    background-color: #ddd;
+}
+.category.active {
+    background-color: #606060;
+    color: white;
+    border-color: #eee;
+}
+.category:last-child {
+    margin-right: 0;
+}
+.videos {
+    
 }
 
 .video-section{
@@ -9,7 +49,7 @@
     gap: 3rem 1rem;
     padding: 3rem 0;
     margin: 0 1.5rem;
-    border-top: 4px solid #ccc;
+    border-top: 2px solid #ccc;
 }
 .video-section:first-child{
     border-top: none;
@@ -77,40 +117,8 @@
     color: #555;
 }
 .videos {
- background-color: #f9f9f9;    
 }
-.categories{
-    padding: 1rem 2rem;
-    border-top: 1px solid #999;
-    border-bottom: 1px solid #999;
-}
-.category-section {
-    display: flex;
-    overflow: hidden;
-}
-.category {
-    margin-right: 1rem;
-    word-wrap: none;
-    white-space: nowrap;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #e7e7e7;
-    padding: .5rem 1rem;
-    font-size:small;
-    cursor: pointer;
-    transition: background-color 150ms;
-}
-.category:hover {
-    background-color: #ddd;
-}
-.category.active {
-    background-color: #606060;
-    color: white;
-    border-color: #eee;
-}
-.category:last-child {
-    margin-right: 0;
-}
+
 .small-side-bar {
     width: 5%;
 }
