--- a/style.css
+++ b/style.css
@@ -213,7 +213,6 @@ body {
 }
 
 
-
 .main-content{
   height: calc(100vh - 70px);
   display: flex;
@@ -358,32 +357,27 @@ iframe {
 }
 
 @media (max-width: 425px) {
-  .header__search {
+ .sr-cen {
     display: none;
   }
-
-  .header__icons .material-icons {
-    display: none;
-  }
-
-  .header__icons .display-this {
-    display: inline;
-  }
-
-  .sidebar {
+  .img-cam {
+  display: none;
+}
+  .img-bell {
+  display: none;
+}
+  .side-bar {
     display: none;
   }
 }
 
 @media (max-width: 768px) {
-  .header__search {
+  .sr-cen {
+    display: none;
+  } 
+  .side-bar {
     display: none;
   }
-
-  .sidebar {
-    display: none;
-  }
-
   .show-sidebar {
     display: inline;
     position: fixed;
@@ -391,9 +385,8 @@ iframe {
     height: auto;
   }
 }
-
 @media (max-width: 941px) {
-  .header__search input {
+  .sr-cen input {
     width: 300px;
   }
 }
