--- a/style.css
+++ b/style.css
@@ -224,12 +224,10 @@ body {
   gap: 3rem 1rem;
   flex-wrap: nowrap;
   margin: 0 1.5rem;
-  overflow: hidden;
+  
 }
 .category-section {
-  display: flex;
-  overflow: hidden;
-  flex-wrap: nowrap;
+  
 }
 .category {
   word-wrap: none;
@@ -274,9 +272,9 @@ body {
 .video-section{
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 3rem 1rem;
-  padding: 3rem 0;
-  margin: 0 1.5rem;
+  gap: 1rem 1rem;
+  padding: 1rem 0;
+  margin: 0 24px;
 }
 .video-section:first-child{
   border-top: none;
